--- a/.github/ISSUE_TEMPLATE/이슈-템플릿--목업-.md
+++ b/.github/ISSUE_TEMPLATE/이슈-템플릿--목업-.md
@@ -9,18 +9,23 @@ assignees: ''
 
 [ ] 컴포넌트 완성 
 [ ] 컴포넌트 완성 
-[ ] 컴포넌트 오나성
+[ ] 컴포넌트 완성 
+
+*주의사항
+*데이터 구조 (각 컴포넌트에 들어가야할 데이터) 
 
 
 (참조)
 
+질문목록페이지 목업 
+
 - [x] 전체 flexbox 구조잡기
-- [x] sidebar 컴포넌트 (모양) 구현
-- [x] filter 컴포넌트 구현 
+- [x] sidebar 컴포넌트 (모양) 완성
+- [x] filter 컴포넌트 완성
 - [x] 질문하기 버튼, 클릭해서 질문 작성 페이지로 연결
 - [x] Single thread 컴포넌트 구성/디자인
   - [x] data: title, displayName, createdDate, modifiedDate, avatarImg, viewNum, answerNum
   - [x] fontawesome 아이콘 적용 (viewNum, answerNum)
   - [x] answer 유무 표시 
   - [x] 작성자 아바타 표시
-- [x] Multiple Threads 컴포넌트 - thread 여러개 mapping
+- [x] Threads 컴포넌트 - thread 여러개 mapping
